--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="demojs.html">JavaScript</a></li>
             <li><a href="#">Java</a></li>
             <li><a href="#">Python</a></li>
-            <li><a href="./form_tu_lam1/index.html">Form</a></li>
+            <li><a href="https://momonga01.github.io/formtulam1/">Form</a></li>
 
         </ul>
     </nav>
