them form comment

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <ul>
             <li><a href="#"><i class="fa fa-home"></i></a></li>
             <li><a href="demojs.html">JavaScript</a></li>
-            <li><a href="#">Java</a></li>
-            <li><a href="#">Python</a></li>
-            <li><a href="https://momonga01.github.io/formtulam1/">Form</a></li>
+            <li><a href="./new_form/index.html">Form-comment</a></li>
+            <!-- <li><a href="#">Python</a></li> -->
+            <li><a href="https://momonga01.github.io/formtulam1/">Form-contact</a></li>
 
         </ul>
     </nav>
@@ -49,7 +49,7 @@
         <p>- Sau khi học xong năm ngôn ngữ trên, đồng nghĩa với việc bạn đã có thể bắt đầu tự làm được website. Ngoài ra bạn cũng có thể học thêm các ngôn ngữ khác như jQuery, Bootstrap, Nodejs, Codeigniter,.... để giúp tăng tốc độ phát triển website.</p>
     </main>
 
-    <div class="sub-form">
+    <!-- <div class="sub-form">
         <form name="form-comment"  onsubmit= "return validateFormComment()" method="post">
             <label for="user-cmt">Name</label>
             <p id="user-cmt-err"></p>
@@ -64,7 +64,7 @@
             <input type="reset" value="reset">
             <input type="submit" value="send">
         </form>
-    </div>
+    </div> -->
     <footer>
         <div>©2021 Designed by Le Trung Kien</div>
     </footer>
